--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,11 @@
   "framework": "nextjs",
   "installCommand": "npm run install:clean",
   "buildCommand": "npm run build",
+    "functions": {
+    "src/app/api/songs/route.ts": {
+      "maxDuration": 300
+    }
+  },
   "env": {
     "MONGODB_URI": "mongodb+srv://marinandhu659:DlaVD5sOpNyCrW5W@cluster0.rlgy9uh.mongodb.net/palani_pathayathirai",
     "NEXTAUTH_SECRET": "c1k2B2h3Xq+G7cFoX3m0yF42+ZupWm7LZjF6bV1t4Pg=",
